chore: Move set to PythonInterpreter instance
This gives the illusion of each PythonLikeType having a context,
but is it really a context if every instance the same
CPythonBackedInterpreter?